# RECIPE

./: .readthedocs.yaml  README.md  requirements.txt
RECIPE/: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
RECIPE/bulk/: RECIPE.py
RECIPE/data/: README.md
RECIPE/data/bulk/: human_reference.csv  human_sequence_unknown.npy  mouse_reference.csv  mouse_sequence_unknown.npy  single_cell_transfer_sequence.npy
RECIPE/data/networks/: human_ppi_known.csv  mouse_ppi_unknown.csv  single_cell_transfer_ppi.csv
RECIPE/data/pausing/: human_nc2_pause.csv  human_scribo_pause.csv
RECIPE/data/single_cell/: cell_embeddings.npy  metadata.csv  scriboseq_metadata.csv
RECIPE/docs/: conf.py  data.md  index.md  installation.md  requirements.txt  script_index.md
RECIPE/ppi/: modelppi.py
RECIPE/recipe/: README.md  bulk_data.py  bulk_workflow.py  models.py  utils.py
RECIPE/sc/: modelsc.py
RECIPE/src/recipe/: README.md  __init__.py  assets.py  bulk_regression.py  config.py  data_construction.py  defaults.py  pipeline.py  ppi_inference.py  ppi_workflow.py  self_learning.py  single_cell.py  single_cell_riboseq_workflow.py  single_cell_rnaseq_workflow.py
bulk/: modelbulk.py
sc/: 2506代码整合figure6_副本.ipynb  modelsc.py
